<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/rad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rad"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dot3"
        android:layout_marginStart="25dp"/>

    <TextView
        android:id="@+id/dot3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dot3"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/rad"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="25dp"
        android:gravity="end"/>
    
    <TextView
        android:id="@+id/top_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/top_text"
        app:layout_constraintTop_toBottomOf="@id/rad"
        app:layout_constraintBottom_toTopOf="@id/bottom_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="0.5"/>

    <TextView
        android:id="@+id/bottom_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/bottom_text"
        app:layout_constraintTop_toBottomOf="@id/top_text"
        app:layout_constraintBottom_toTopOf="@id/button_ac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="0.52"/>

    <Button
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/seven"
        app:layout_constraintTop_toBottomOf="@id/bottom_text"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/eight"
        app:layout_constraintTop_toBottomOf="@id/bottom_text"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/nine"
        app:layout_constraintTop_toBottomOf="@id/bottom_text"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_backspace"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/four"
        app:layout_constraintTop_toBottomOf="@id/button_7"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/five"
        app:layout_constraintTop_toBottomOf="@id/button_8"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/six"
        app:layout_constraintTop_toBottomOf="@id/button_9"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_backspace"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/one"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/two"
        app:layout_constraintTop_toBottomOf="@id/button_5"
        app:layout_constraintBottom_toTopOf="@id/button_comma"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/three"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        app:layout_constraintBottom_toTopOf="@id/button_equals"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_backspace"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/zero"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_comma"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_comma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/comma"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_equals"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/num_button"
        android:text="@string/equals"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_comma"
        app:layout_constraintEnd_toStartOf="@id/button_backspace"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.8"/>

    <Button
        android:id="@+id/button_backspace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/action_button"
        android:text="@string/backspace"
        app:layout_constraintTop_toBottomOf="@id/bottom_text"
        app:layout_constraintBottom_toTopOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintEnd_toStartOf="@id/button_ac"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.9"/>

    <Button
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/action_button"
        android:text="@string/divide"
        app:layout_constraintTop_toBottomOf="@id/button_backspace"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_ac"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.9"/>

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/action_button"
        android:text="@string/multiply"
        app:layout_constraintTop_toBottomOf="@id/button_divide"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_ac"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.9"/>

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/action_button"
        android:text="@string/minus"
        app:layout_constraintTop_toBottomOf="@id/button_multiply"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@id/button_ac"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.9"/>

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/action_button"
        android:text="@string/plus"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_equals"
        app:layout_constraintEnd_toStartOf="@id/button_ac"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.9"/>

    <Button
        android:id="@+id/button_ac"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/blue_button"
        android:text="@string/arrow"
        app:layout_constraintTop_toBottomOf="@id/bottom_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="0.15"/>

</androidx.constraintlayout.widget.ConstraintLayout>